--- a/Index.html
+++ b/Index.html
@@ -255,7 +255,7 @@
                                 <label for="loginPassword">كلمة المرور</label>
                             </div>
                             <div class="center-align">
-                                <button class="btn waves-effect waves-light" type="submit">
+                                <button class="btn waves-effect waves-light" type="submit" aria-label="تسجيل الدخول">
                                     دخول
                                     <i class="material-icons left">login</i>
                                 </button>
@@ -288,7 +288,7 @@
                                 <label for="registerPassword">كلمة المرور (6 أحرف على الأقل)</label>
                             </div>
                             <div class="center-align">
-                                <button class="btn waves-effect waves-light" type="submit">
+                                <button class="btn waves-effect waves-light" type="submit" aria-label="تسجيل">
                                     تسجيل
                                     <i class="material-icons left">person_add</i>
                                 </button>
@@ -358,7 +358,7 @@
             <div class="header-section">
                 <h4>نظام إدارة التدريب الميداني</h4>
                 <p>مرحباً <span id="userEmail"></span> - <span id="userType"></span></p>
-                <button class="btn red lighten-1 waves-effect waves-light" onclick="logout()">
+                <button class="btn red lighten-1 waves-effect waves-light" onclick="logout()" aria-label="تسجيل الخروج">
                     تسجيل الخروج
                     <i class="material-icons left">logout</i>
                 </button>
@@ -462,15 +462,15 @@
                 <div class="row">
                     <div class="col s12">
                         <div class="export-buttons">
-                            <button class="btn green waves-effect waves-light" onclick="exportToCSV()">
+                            <button class="btn green waves-effect waves-light" onclick="exportToCSV()" aria-label="تصدير CSV">
                                 تصدير CSV
                                 <i class="material-icons left">file_download</i>
                             </button>
-                            <button class="btn blue waves-effect waves-light" onclick="exportToPDF()">
+                            <button class="btn blue waves-effect waves-light" onclick="exportToPDF()" aria-label="تصدير PDF">
                                 تصدير PDF
                                 <i class="material-icons left">picture_as_pdf</i>
                             </button>
-                            <button id="addRecordBtn" class="btn orange waves-effect waves-light hidden" onclick="showAddModal()">
+                            <button id="addRecordBtn" class="btn orange waves-effect waves-light hidden" onclick="showAddModal()" aria-label="إضافة سجل">
                                 إضافة سجل
                                 <i class="material-icons left">add</i>
                             </button>
@@ -517,11 +517,11 @@
                         </div>
                         
                         <div class="pagination-container">
-                            <button class="btn-flat waves-effect" onclick="previousPage()" id="prevBtn" disabled>
+                            <button class="btn-flat waves-effect" onclick="previousPage()" id="prevBtn" disabled aria-label="الصفحة السابقة">
                                 <i class="material-icons">chevron_right</i>
                             </button>
                             <span id="pageInfo">صفحة 1 من 1</span>
-                            <button class="btn-flat waves-effect" onclick="nextPage()" id="nextBtn" disabled>
+                            <button class="btn-flat waves-effect" onclick="nextPage()" id="nextBtn" disabled aria-label="الصفحة التالية">
                                 <i class="material-icons">chevron_left</i>
                             </button>
                         </div>
@@ -608,11 +608,13 @@
     </div>
 
     <!-- Materialize JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
     <!-- Tom-Select JS -->
-    <script src="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/js/tom-select.complete.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/js/tom-select.complete.min.js" defer></script>
 
-    <script>
+    <script defer>
+        (function(window){
+        'use strict';
         // Global variables
         let currentUser = null;
         let currentUserType = null;
@@ -1710,6 +1712,20 @@
                 timeout = setTimeout(later, wait);
             };
         }
+
+        window.app = {
+            logout,
+            showAddModal,
+            saveRecord,
+            editRecord,
+            deleteRecord,
+            exportToCSV,
+            exportToPDF,
+            previousPage,
+            nextPage,
+            clearFilters
+        };
+        })(window);
     </script>
 </body>
 </html>
